--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
-<head>
-  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-</head>
-<body>
-  <div id="calendar">
-    <div id="calendar_header"><i class="icon-chevron-left"></i>          <h1></h1><i class="icon-chevron-right"></i>         </div>
-    <div id="calendar_weekdays"></div>
-    <div id="calendar_content"></div>
+<div class="app" id="app">
+  <form class="form" v-on:submit="addTodo">
+    <input class="input form__input" v-model="inputVal"/>
+    <button class="btn form__submit-btn" type="submit">Add</button>
+  </form>
+  <transition-group tag="ol" name="list" class="todo-list">
+    <li
+      class="todo-list__item"
+      v-bind:class="{ complete: todo.complete }"
+      v-bind:key="index"
+      v-for="(todo, index) in filteredTodos">
+      <button
+        class="todo-list__item-content"
+        v-on:click="toggleTodo(todo)">
+        {{ todo.text }}
+      </button>
+      <button
+        class="btn todo-list__item-remove"
+        v-on:click="deleteTodo(index)">
+        <i class="fa" v-bind:class="[todo.complete ? 'fa-check' : 'fa-times']"></i>
+      </button>
+    </li>
+  </transition-group>
+  <div class="filters">
+    <button 
+      class="btn filters__btn filters__btn--all" 
+      v-on:click="filterTodos('all')">
+      Tutti
+    </button>
+    <button 
+      class="btn filters__btn filters__btn--complete" 
+      v-on:click="filterTodos('complete')">
+      Complete
+    </button>
+    <button 
+      class="btn filters__btn filters__btn--incomplete" 
+      v-on:click="filterTodos('incomplete')">
+      Incomplete
+    </button>
   </div>
-</body>
+</div>
