--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<link rel="stylesheet" type="text/css" href="style.css"
+script language="JavaScript" type="text/JavaScript" src="function.js"></script>
+<body>
+</html>
 <div class="app" id="app">
   <form class="form" v-on:submit="addTodo">
     <input class="input form__input" v-model="inputVal"/>
@@ -39,3 +51,4 @@
     </button>
   </div>
 </div>
+</body>
