--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css"
-script language="JavaScript" type="text/JavaScript" src="function.js"></script>
+<script language="JavaScript" type="text/JavaScript" src="function.js"></script>
 <body>
 </html>
 <div class="app" id="app">
