--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
-<div class="app" id="app">
-  <form class="form" v-on:submit="addTodo">
-    <input class="input form__input" v-model="inputVal"/>
-    <button class="btn form__submit-btn" type="submit">Add</button>
-  </form>
-  <transition-group tag="ol" name="list" class="todo-list">
-    <li
-      class="todo-list__item"
-      v-bind:class="{ complete: todo.complete }"
-      v-bind:key="index"
-      v-for="(todo, index) in filteredTodos">
-      <button
-        class="todo-list__item-content"
-        v-on:click="toggleTodo(todo)">
-        {{ todo.text }}
-      </button>
-      <button
-        class="btn todo-list__item-remove"
-        v-on:click="deleteTodo(index)">
-        <i class="fa" v-bind:class="[todo.complete ? 'fa-check' : 'fa-times']"></i>
-      </button>
-    </li>
-  </transition-group>
-  <div class="filters">
-    <button 
-      class="btn filters__btn filters__btn--all" 
-      v-on:click="filterTodos('all')">
-      Tutti
-    </button>
-    <button 
-      class="btn filters__btn filters__btn--complete" 
-      v-on:click="filterTodos('complete')">
-      Complete
-    </button>
-    <button 
-      class="btn filters__btn filters__btn--incomplete" 
-      v-on:click="filterTodos('incomplete')">
-      Incomplete
-    </button>
+<!-- Import jQuery, FontAwesome Icons and Open Sans Font -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<script src="https://kit.fontawesome.com/56942480bb.js" crossorigin="anonymous"></script>
+
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- List wrapper -->
+<div id="listWrapper">
+  
+  <!-- List title -->
+  <div id="title">
+    <input id="titleInput" type="text" placeholder="My List" maxlength="21">
+    <i class="fa fa-pencil-alt"></i>
   </div>
+
+  <div id="separator"></div>
+
+  <!-- To do items -->
+  <div id="itemsWrapper">
+    <div class="item">
+      <!-- New items are created here -->
+    </div>
+  </div>
+
+  <!-- Add a new item -->
+  <div id="addNewItemWrapper">
+    <input type="text" id="addNewItemInput" maxlength="30">
+    <button id="addNewItemBtn"><i class="fas fa-plus"></i></button>
+  </div>
+  
 </div>
-</body>
